--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                  <SPan style="display: block; font: size 70px;">INDUSTRIAL</SPan>
                 SAFETY PRODUCTS </h1>
         </div>
-        <form>"
+        <form>
             <h2 style="font-weight: normal; text-align:center">
                 CONTACT US TODAY
             </h2>
@@ -44,11 +44,59 @@
         <div>
             <textarea rows="7" style="width:100%"></textarea>
         </div>
-        <button type="submit" style="width: 100%; background:#00f9fb;">SUBMIT</button>
+        <button type="submit" style="width: 100%; height: auto; background:#00f9fb; color: #fff">SUBMIT</button>
 </form>
     </main>
     <!--Banner Section End-->
+
+     <!--Main Section Start-->
+    <section class="main">
+    <div class="innovations">
+        <h2>Innovations</h2>
+        <img src="./assets/img/Innovations.jpg" alt="People">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos repellat porro autem, cumque molestiae, dolore laborum sit pariatur in doloribus dignissimos reprehenderit animi odio consequatur delectus quos. Molestiae, ut fugit.</p>
+    </div>
+    <div class="people">
+        <h2>People & Culture</h2>
+        <img src="./assets/img/People & Culture.jpg" alt="Solution">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima quibusdam quis vitae, illo quasi sit voluptatum vero, quaerat enim soluta amet reiciendis distinctio eius iure, rerum corrupti possimus ex? Porro.</p>
+    </div>
+    <div class="solution">
+        <h2>Solution at a Glace</h2>
+        <img src="./assets/img/Solution.jpg" alt="Innovation">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, voluptatibus. Iste ratione consequatur consequuntur laboriosam cumque impedit consectetur saepe ut ipsam sapiente repellendus, facere distinctio id. Ratione quas repellat rem.</p>
+    </div>
+    </section>
+    <!--Main Section End-->
+<!--Blue Section Start-->
+
+<!--Blue Section Start-->
+    <!--Company Details Start-->
+    <section class="company-Details">
+        <div class="top">
+            <div>
+                <img src="./assets/img/image 1.jpeg" alt="one">
+            </div>
+            <div class="content">
+            <h2>Lorem, Ipsum Dolor</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quisquam saepe placeat! Consectetur voluptatum tempora nam aut nesciunt veritatis esse adipisci? Sapiente deleniti consectetur laboriosam, corrupti placeat est exercitationem labore?</p>
+        </div>
+       </div>
+       <div class="bottom">
+        <div class="content">
+            <h2>Lorem Ipsum Dolor</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio eaque et, aliquam doloremque minima animi blanditiis facere dolores. Dicta illum ut maxime magni vitae impedit earum dolorum cupiditate blanditiis tempora!</p>
+        </div>
+        <div>
+            <img src="./assets/img/images (1).jpeg" alt="one">
+        </div>
+       </div>
+    </section>
+    <!--Company Details End-->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
     <script src="./assets/JS/script.js"></script>
+
+   
 </body>
 </html>
