adding main part

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!--Company Details Start-->
     <section class="company-Details">
         <div class="top">
-            <div>
+            <div class="image">
                 <img src="./assets/img/image 1.jpeg" alt="one">
             </div>
             <div class="content">
@@ -87,7 +87,7 @@
             <h2>Lorem Ipsum Dolor</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio eaque et, aliquam doloremque minima animi blanditiis facere dolores. Dicta illum ut maxime magni vitae impedit earum dolorum cupiditate blanditiis tempora!</p>
         </div>
-        <div>
+        <div class="image">
             <img src="./assets/img/images (1).jpeg" alt="one">
         </div>
        </div>
