--- a/index.html
+++ b/index.html
@@ -69,29 +69,48 @@
     </section>
     <!--Main Section End-->
 <!--Blue Section Start-->
-
-<!--Blue Section Start-->
+<section class="about">
+    <div class="container">
+      <h2>A Little Bit About Us</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ullam soluta voluptatum 
+        voluptatibus, dolor tempora obcaecati quisquam quae.Lorem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt nisi excepturi sint non enim obcaecati eum recusandae, nihil iste illum perferendis ad deserunt explicabo porro consectetur tempore quasi rerum qui. 
+      </p>
+      <button class="about-button">LEARN MORE</button>
+    </div>
+  </section>
+<!--Blue Section End-->
     <!--Company Details Start-->
     <section class="company-Details">
+        <!-- Top Section -->
         <div class="top">
-            <div class="image">
-                <img src="./assets/img/image 1.jpeg" alt="one">
-            </div>
-            <div class="content">
+          <div class="image">
+            <img src="assets/img/image 1.jpeg" alt="one">
+          </div>
+          <div class="content">
             <h2>Lorem, Ipsum Dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quisquam saepe placeat! Consectetur voluptatum tempora nam aut nesciunt veritatis esse adipisci? Sapiente deleniti consectetur laboriosam, corrupti placeat est exercitationem labore?</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quisquam saepe placeat! 
+              Consectetur voluptatum tempora nam aut nesciunt veritatis esse adipisci? Sapiente deleniti 
+              consectetur laboriosam, corrupti placeat est exercitationem labore?
+            </p>
+          </div>
         </div>
-       </div>
-       <div class="bottom">
-        <div class="content">
-            <h2>Lorem Ipsum Dolor</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio eaque et, aliquam doloremque minima animi blanditiis facere dolores. Dicta illum ut maxime magni vitae impedit earum dolorum cupiditate blanditiis tempora!</p>
+        <!-- Bottom Section -->
+        <div class="bottom">
+            <div class="image">
+                <img src="assets/img/images (1).jpeg" alt="two">
+              </div>
+          <div class="content">
+            <h2>Lorem, Ipsum Dolor</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quisquam saepe placeat! 
+              Consectetur voluptatum tempora nam aut nesciunt veritatis esse adipisci? Sapiente deleniti 
+              consectetur laboriosam, corrupti placeat est exercitationem labore? Lorem
+            </p>
+          </div>
         </div>
-        <div class="image">
-            <img src="./assets/img/images (1).jpeg" alt="one">
-        </div>
-       </div>
-    </section>
+      </section>
     <!--Company Details End-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
