--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div>
             <textarea rows="7" style="width:100%"></textarea>
         </div>
-        <button type="submit" style="width: 100%; height: auto; background:#00f9fb; color: #fff">SUBMIT</button>
+        <button type="submit" style="width: 100%; cursor: pointer; height: auto; background:#00f9fb; color: #fff">SUBMIT</button>
 </form>
     </main>
     <!--Banner Section End-->
